docs/0.20.1/_sources/api/gammapy.modeling.models.ConstantSpectralModel.rst.txt
ConstantSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpectralModel.const
      ~ConstantSpectralModel.covariance
      ~ConstantSpectralModel.default_parameters
      ~ConstantSpectralModel.frozen
      ~ConstantSpectralModel.is_norm_spectral_model
      ~ConstantSpectralModel.parameters
      ~ConstantSpectralModel.tag
      ~ConstantSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpectralModel.__call__
      ~ConstantSpectralModel.copy
      ~ConstantSpectralModel.energy_flux
      ~ConstantSpectralModel.energy_flux_error
      ~ConstantSpectralModel.evaluate
      ~ConstantSpectralModel.evaluate_error
      ~ConstantSpectralModel.freeze
      ~ConstantSpectralModel.from_dict
      ~ConstantSpectralModel.from_parameters
      ~ConstantSpectralModel.integral
      ~ConstantSpectralModel.integral_error
      ~ConstantSpectralModel.inverse
      ~ConstantSpectralModel.inverse_all
      ~ConstantSpectralModel.plot
      ~ConstantSpectralModel.plot_error
      ~ConstantSpectralModel.reassign
      ~ConstantSpectralModel.reference_fluxes
      ~ConstantSpectralModel.spectral_index
      ~ConstantSpectralModel.to_dict
      ~ConstantSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: const
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: unfreeze
